welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:11: error: '<-' expected but ')' found.
    for (k<0 to n-1){
                   ^arrayFront9:17: error: illegal start of simple expression
  }
  ^